# wordle

./: .gitignore  CMakeLists.txt  Makefile  README.md
backend/: Makefile  a.out
backend/include/: libft.h  wordle.h
backend/libft/src/: av.c  free_tab.c  ft_abs.c  ft_fabs.c  ft_isascii.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_split.c  ft_str_is_digit.c  ft_strcmp.c  ft_strlcpy.c  ft_strndup.c  ft_strrchr.c  ft_swap_float.c  ft_tab_len.c  ft_toupper.c
backend/src/: get_feedback.c  main.c  parse_file.c  run_wordle.c
gui/: .gitignore  CMakeLists.txt
gui/src/: main.c
include/: wordle.h  wordlegui.h
lib/libft/: Makefile
lib/libft/src/: ft_atod.c  ft_atoi.c  ft_atol.c  ft_bzero.c  ft_calloc.c  ft_gap.c  ft_getintlen.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_max.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrncmp.c  ft_strsjoin.c  ft_strtok.c  ft_strtok_r.c  ft_strtrim.c  ft_substr.c  ft_swap_int.c  ft_tolower.c  get_next_line.c  is_above_int.c
lib/libft/src/ft_scan/: parse_type.c
src/: confetti.c  free_dic.c  get_random_word.c  is_in_word_list.c  logic.c  main.c  render.c  run_wordle.c
